--- a/form.html
+++ b/form.html
@@ -12,13 +12,13 @@
 <!-- If we remove this, every thing will move to the left of the page-->
 <div align="center">
 <!--Adds a heading to the form-->
-<h1>Employee Interests Survey form</h1>
-Enter your name:
+<h1>Employee Interests Survey Form</h1>
+Enter Your Name:
 <!-- Input type text for small texts, specify size -->
 <input type="text" name="UserName" size=35 maxlength=35 value="">
 <!--Adds spaces - remove and see what happens -->
 </br></br>
-Enter your department:
+Enter Your Department:
 <input type="text" name="Deptt" size=35 maxlength=35 value=""> </br> </br>
 Tell us a little about yourself:
 <!-- For writing lot of text like descriptions with text wrapping,
@@ -40,11 +40,11 @@ How do you like to read about your favorite topics?
 What genre of movies do you like?
 <!--Select box lets you choose one of the multiple dropdown options-->
 <select name="moviepref" ><option>
-<option value=1 selected = "true">comedy
-<option value=2 >romance
-<option value=3 >thriller
-<option value=4 >horror
-<option value=5 >biopic
+<option value=1 selected = "true">Comedy
+<option value=2 >Romance
+<option value=3 >Thriller
+<option value=4 >Horror
+<option value=5 >Biopic
 </select>
 </br></br>
 <!--submits the information entered in the form by the user -->
