--- a/form.html
+++ b/form.html
@@ -45,6 +45,7 @@ What genre of movies do you like?
 <option value=3 >Thriller
 <option value=4 >Horror
 <option value=5 >Biopic
+<option value=6 >Action
 </select>
 </br></br>
 <!--submits the information entered in the form by the user -->
